package clm.demo.models;

import clm.demo.models.enums.ContractStatus;
import jakarta.persistence.*;
import lombok.*;
import lombok.experimental.SuperBuilder;
import org.hibernate.annotations.BatchSize;
import org.hibernate.annotations.JdbcTypeCode;

import java.math.BigDecimal;
import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

/**
 * A filled document generated for a specific client.
 * Extends {@link Document} (JOINED inheritance) and owns the client-specific
 * lifecycle fields. Auxiliary files are attached as {@link Appendix} children.
 */
@Entity
@Table(name = "contract", schema = "clm", indexes = {
        @Index(name = "idx_contract_template_client", columnList = "document_id, client_id"),
        @Index(name = "idx_contract_validity",        columnList = "contract_start_date, contract_end_date")
})
@DiscriminatorValue("CONTRACT")
@PrimaryKeyJoinColumn(name = "document_id")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@SuperBuilder
@EqualsAndHashCode(callSuper = false)
@ToString(callSuper = false)
public class Contract extends Document {

    @Column(name = "client_id", nullable = false)
    private Integer clientId;

    @Enumerated(EnumType.STRING)
    @JdbcTypeCode(org.hibernate.type.SqlTypes.NAMED_ENUM)
    @Column(name = "contract_status", nullable = false)
    @Builder.Default
    private ContractStatus contractStatus = ContractStatus.PENDING_SIGNATURE;

    @Column(name = "contract_value", precision = 12, scale = 2)
    private BigDecimal contractValue;

    @Column(name = "contract_balance", precision = 12, scale = 2, nullable = false)
    private BigDecimal contractBalance;

    @Column(name = "auto_renew", nullable = false)
    @Builder.Default
    private Boolean autoRenew = false;

    @Column(name = "contract_start_date")
    private LocalDate contractStartDate;

    @Column(name = "contract_end_date")
    private LocalDate contractEndDate;

    @Column(name = "termination_date")
    private LocalDate terminationDate;

    @Column(name = "reasons_for_termination", length = 1000)
    @Builder.Default
    private String reasonsForTermination = "";

    @OneToMany(mappedBy = "contract", cascade = CascadeType.ALL, orphanRemoval = true)
    @BatchSize(size = 20)
    @Builder.Default
    private List<Appendix> appendices = new ArrayList<>();

    /* audit data */

    @Column(name = "generated_at")
    private LocalDateTime generatedAt;

    @Column(name = "generated_by_user_id")
    private Integer generatedByUserId;

    @Column(name = "terminated_at")
    private LocalDateTime terminatedAt;

    @Column(name = "terminated_by_user_id")
    private Integer terminatedByUserId;

    @Column(name = "uploaded_signed_at")
    private LocalDateTime uploadedSignedAt;

    @Column(name = "uploaded_signed_by_user_id")
    private Integer uploadedSignedByUserId;

    /**
     * Automatically set generatedAt and generatedByUserId when the contract is first created.
     * This is called before the entity is persisted to the database.
     */
    @PrePersist
    protected void onCreate() {
        if (this.generatedAt == null) {
            this.generatedAt = LocalDateTime.now();
        }
    }
}
